--- a/2048-JS/style.css
+++ b/2048-JS/style.css
@@ -1,29 +1,91 @@
-p{
-  color: #000;
+:root {
+  --black: #2d2c2c;
+  --fontGloria: 'Gloria Hallelujah', cursive;
+  --block: block;
+  --auto: auto;
+  --center: center;
+  --fontSize: 20px;
 }
 
-h1{
-  text-align: center;
-  font-family: 'Gloria Hallelujah', cursive;
-}
-canvas{
-  -moz-animation: changeBackground 10s infinite;
-  -webkit-animation: changeBackground 10s infinite; 
-  display: table;
-  margin:0 auto;
-  margin-top: 5px;
-}
-#gameOver{
-  text-align: center;
-  margin-top: -15px;
-  font-size: 25px;
-  font-family: 'Gloria Hallelujah', cursive;
-}
 body {
-  background: #A9A9F5;
+  background: #cb6bff;
   overflow-y: hidden;
 }
 
+
+p {
+  color: var(--black);
+}
+
+header h1 {
+  text-align: var(--center);
+  font-family: var(--fontGloria);
+}
+header .size {
+  background: none;
+  width: 10%;
+  border:1px solid #fff;
+  color: var(--black);
+  display: var(--block);
+  margin: var(--auto);
+}
+
+header .game-over {
+  text-align: var(--center);
+  margin-top: -15px;
+  font-size: var(--fontsize);
+  font-family: var(--fontGloria);
+}
+
+header > .container {
+  display: flex;
+  justify-content: var(--center);
+  margin-top: 5px;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+header > .container > .btn-new-game {
+  height:45px;
+  width: 15%;
+  border: 1px solid #fff;
+  background: none;
+  color: #fff;
+  border-radius: 10px;
+  font-family: var(--fontGloria);
+  cursor:pointer;
+  margin-left: 80px;
+  margin-top: 10px;
+}
+header > .container > .player-score {
+  text-align: var(--center);
+  font-family: var(--fontGloria);
+  font-size: var(--fontsize);
+  padding-left: 10px;
+}
+header > .container > .player-record {
+  text-align: var(--center);
+  font-family: var(--fontGloria);
+  font-size: var(--fontsize);
+  background-color: #A4A4A4;
+  border-radius: 5px;
+  color: #fff;
+  width: 30%;
+  margin-left: 80px;
+}
+.title-arrow {
+  text-align: var(--center);
+  margin-top: 15px;
+  font-size: var(--fontsize);
+  font-family: var(--fontGloria);
+}
+
+section > canvas {
+  -moz-animation: changeBackground 10s infinite;
+  -webkit-animation: changeBackground 10s infinite; 
+  display: var(--block);
+  margin: var(--auto);
+  margin-top: 5px;
+}
 @keyframes changeBackground
 {
   0%   {background: #F5D0A9;}
@@ -33,94 +95,28 @@ body {
   100% {background: #A9A9F5;}
 }
 
-.container{
+section > .horizontal-center {
+  display: flex;
+  justify-content: var(--center);
+}
+
+section > .dir-up,
+section > .dir-left,
+section > .dir-right,
+section > .dir-down {
+  cursor: pointer;
+}
+
+section > .float-right {
+  float: right;
+}
+
+section > .vertical-center {
   display: flex;
   justify-content: center;
-  margin-top: 5px;
-  padding-left: 20%;
-  padding-right: 20%;
+  margin-top: -360px;
 }
-#button{
-  height:45px;
-  width: 15%;
-  border: 1px solid #fff;
-  background-color: #A9A9F5;
-  color: #fff;
-  border-radius: 10px;
-  font-family: 'Gloria Hallelujah', cursive;
-  cursor:pointer;
-  margin-left: 80px;
-  margin-top: 10px;
-}
-#playerScore{
-  text-align: center;
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 20px;
-  padding-left: 10px;
-}
-#record{
-  text-align: center;
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 18px;
-  background-color: #A4A4A4;
-  border-radius: 5px;
-  color: #fff;
-  width: 30%;
-  margin-left: 80px;
-}
-#titleArrow{
-  text-align: center;
-  margin-top: 15px;
-  font-size: 17px;
-  font-family: 'Gloria Hallelujah', cursive;
-}
-#up{
- width: 0px; 
- height: 0px; 
- border-left: 30px solid transparent;
- border-right: 30px solid transparent;
- border-bottom: 30px solid #000;
- display: table;
- margin:0 auto;
- cursor: pointer;
- margin-top: -15px;
-}
-#left{
-  width: 0px; 
-  height: 0px; 
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent; 
-  border-right:30px solid #000; 
-  margin-left: 508px;
-  margin-top: -280px;
-  cursor: pointer;
-}
-#right{
-  width: 0px; 
-  height: 0px; 
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 30px solid #000;
-  margin-left: 982px;
-  margin-top: -59px;
-  cursor: pointer;
-}
-#down{
- width: 0px; 
- height: 0px; 
- border-left: 30px solid transparent;
- border-right: 30px solid transparent;
- border-top: 30px solid #000;
- display: table;
- margin:0 auto;
- margin-top: 5px;
- cursor: pointer;
-}
-#size{
-  background: none;
-  width: 10%;
-  border:1px solid #fff;
-  color: #fff;
-  display: table;
-  margin:0 auto;
+
+section > .vertical-center > .dir-right {
+  margin-left: 520px;
 }
